Fixed Minor UI Bugs
fixed footer placement on Transaction Report page
fixed input box text color from white to black
fixed misalignment on forum-page for "Description"

--- a/src/app/pages/forum-page/forum-page.component.css
+++ b/src/app/pages/forum-page/forum-page.component.css
@@ -37,7 +37,7 @@
   color: white;
   display: flex;
   /* background-color: var(--primary-color); */
-  padding: 10px;
+
   margin-top: 5px;
 }
 
