--- a/src/app/sharedpages/footer/footer.component.css
+++ b/src/app/sharedpages/footer/footer.component.css
@@ -5,6 +5,7 @@
   text-align: center;
   position: relative;
   padding: 20px 10px;
+  margin-top: auto;
 
 }
 
